--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hometel-Flavours</title>
    <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Refresh" content="2; url=public/index.html">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
