--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Hometel-Flavours</title>
    <base href="https://bdiksha230.github.io/hometelflavours/">
+<meta http-equiv="Refresh" content="2; url=public/index.html">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
